Fixed overflow issue on body element

--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100%;
-  width: 100svw;
+  width: 99svw;
 }
 
 a {
@@ -231,9 +231,10 @@ h3 {
 }
 
 .footer {
+  overflow-y: hidden;
   display: grid;
   margin-top: 2svh;
-  width: 100svw;
+  width: 100%;
   padding: 1svh;
   background-color: var(--header-colour);
   color: var(--link-color);
